cleaned and commented

--- a/code/Makefile
+++ b/code/Makefile
@@ -12,13 +12,16 @@ SRCS =	$(SRC_DIR)/parseo.c\
 		$(SRC_DIR)/aux.c\
 		$(SRC_DIR)/delete_quotes.c\
 		$(SRC_DIR)/expand_quotes.c\
-		$(SRC_DIR)/ft_token_list.c\
-		$(SRC_DIR)/tokenize_utils.c\
+		$(SRC_DIR)/token_list_func.c\
+		$(SRC_DIR)/tokenize_functions.c\
+		$(SRC_DIR)/tokenize_aux.c\
 		$(SRC_DIR)/tokenize.c\
 		$(SRC_DIR)/command_lst.c\
 		$(SRC_DIR)/command_lst2.c\
-		$(SRC_DIR)/ft_search_path.c\
-		$(SRC_DIR)/exec_commands.c\
+		$(SRC_DIR)/search_path.c\
+		$(SRC_DIR)/execute.c\
+		$(SRC_DIR)/ex_single_cmd.c\
+		$(SRC_DIR)/command_types.c\
 #		$(SRC_DIR)/ft_utils.c\
 
 OBJ_DIR = ./objs
