--- a/code/Makefile
+++ b/code/Makefile
@@ -27,6 +27,7 @@ SRCS =	$(SRC_DIR)/parseo.c\
 		$(SRC_DIR)/jk_builtin_env.c\
 		$(SRC_DIR)/jk_builtin_exit.c\
 		$(SRC_DIR)/jk_env_copy.c\
+		$(SRC_DIR)/here_doc.c\
 #		$(SRC_DIR)/ft_utils.c\
 
 OBJ_DIR = ./objs
